--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,10 +8,17 @@
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  <h3>Sqlite data</h3>
 
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
+   
+
+    <ion-list>
+         <ion-item *ngFor="let person of people">
+             {{person.firstname}} {{person.lastname}}
+         </ion-item>
+     </ion-list>
+
   </p>
 
   <button ion-button secondary menuToggle>Toggle Menu</button>
